[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexter-flask"
version = "2026.3.25"
description = "Dexter financial research agent — Python/Flask"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langchain-anthropic>=0.3",
  "langchain-google-genai>=2.0",
  "langchain-community>=0.3",
  "apscheduler>=3.10",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "readability-lxml>=0.8",
  "tiktoken>=0.7",
  "gunicorn>=22.0",
  "pyyaml>=6.0",
  "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dexter_flask*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
